name:                  lima-c
version:               0.1.0.0
synopsis:              C code generator for LIMA
-- description:
license:               ISC
license-file:          LICENSE
author:                Benjamin Jones
maintainer:            bjones@galois.com
copyright:             (c) Benjamin Jones 2017
category:              Language
build-type:            Simple
extra-source-files:    ChangeLog.md
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.8     && < 5
                     , lima >= 0.1.0.0
                     , bimap

  exposed-modules:
                       Language.LIMA.C
                       Language.LIMA.C.Code
                       Language.LIMA.C.Compile
                       Language.LIMA.C.Scheduling
                       Language.LIMA.C.Example.Channel
                       Language.LIMA.C.Example.ChannelCond
                       Language.LIMA.C.Example.External
                       Language.LIMA.C.Example.Gcd
                       Language.LIMA.C.Example.Probes
                       Language.LIMA.C.Example.Periodic
                       Language.LIMA.C.Util
