name:    lima
version: 0.1.0.0

category: Language, Embedded

synopsis: An EDSL for embedded hard realtime applications.

description:
    LIMA is a Haskell EDSL for designing hard realtime embedded software.
    Based on guarded atomic actions (similar to STM), LIMA enables
    highly concurrent programming without the need for mutex locking.

    In addition, LIMA performs compile-time task scheduling and generates code
    with deterministic execution time and constant memory use, simplifying the
    process of timing verification and memory consumption in hard realtime
    applications.

    Without mutex locking and run-time task scheduling, LIMA eliminates
    the need and overhead of RTOSes for many embedded applications.

author:     Tom Hawkins <tomahawkins@gmail.com> (2007-2010),
            Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>
            (2015-2016)
maintainer: Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>


license:      ISC
license-file: LICENSE

homepage: https://github.com/galoisinc/lima

build-type:    Simple
cabal-version: >= 1.10

flag develop
  Description: Turn off compiler optimization during development
  Manual: True
  Default: False

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
          base       >= 4.8     && < 5
        , monadLib   >= 3.7.0   && < 4
        , mtl
        , process
        , syb
        , containers
        , bimap
        , pretty
        , graphviz   >= 2999.19 && < 2999.20
        , text
        , filepath


    exposed-modules:
        Language.LIMA
        Language.LIMA.Analysis
        Language.LIMA.Channel
        Language.LIMA.Channel.Types
        Language.LIMA.Common
        Language.LIMA.Common.Fader
        Language.LIMA.Common.Threshold
        Language.LIMA.Common.ValidData
        Language.LIMA.Elaboration
        Language.LIMA.Expressions
        Language.LIMA.Inspect
        Language.LIMA.Language
        Language.LIMA.Types
        Language.LIMA.UeMap
        Language.LIMA.Graph

    other-extensions: GADTs, DeriveDataTypeable

    ghc-options: -Wall
    if flag(develop)
        ghc-options: -Wall -O0

source-repository head
    type:     git
    location: git://github.com/GaloisInc/lima.git
