name:                  slim-c
version:               0.1.0.0
synopsis:              C code generator for SLIM
-- description:
license:               ISC
license-file:          LICENSE
author:                Benjamin Jones
maintainer:            bjones@galois.com
copyright:             (c) Benjamin Jones 2017
category:              Language
build-type:            Simple
extra-source-files:    ChangeLog.md
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.8     && < 5
                     , slim >= 0.1.0.0 && < 0.2
                     , bimap

  exposed-modules:
                       Language.SLIM.C
                       Language.SLIM.C.Code
                       Language.SLIM.C.Compile
                       Language.SLIM.C.Scheduling
                       Language.SLIM.C.Example.Channel
                       Language.SLIM.C.Example.ChannelCond
                       Language.SLIM.C.Example.External
                       Language.SLIM.C.Example.Gcd
                       Language.SLIM.C.Example.Probes
                       Language.SLIM.C.Example.Periodic
                       Language.SLIM.C.Util
