name:    slim
version: 0.1.0.0

category: Language, Embedded

synopsis: An EDSL for embedded hard realtime applications.

description:
    SLIM is a Haskell EDSL for designing hard realtime embedded software.
    Based on guarded atomic actions (similar to STM), SLIM enables
    highly concurrent programming without the need for mutex locking.

    In addition, SLIM performs compile-time task scheduling and generates code
    with deterministic execution time and constant memory use, simplifying the
    process of timing verification and memory consumption in hard realtime
    applications.

    Without mutex locking and run-time task scheduling, SLIM eliminates
    the need and overhead of RTOSes for many embedded applications.

author:     Tom Hawkins <tomahawkins@gmail.com> (2007-2010),
            Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>
            (2015-2016)
maintainer: Benjamin Jones <bjones@galois.com>, Lee Pike <leepike@gmail.com>


license:      ISC
license-file: LICENSE

--homepage:

build-type:    Simple
cabal-version: >= 1.10

--extra-source-files:

flag develop
  Description: Turn off compiler optimization during development
  Manual: True
  Default: False

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base       >= 4.0     && < 5,
        mtl        ,
        process    ,
        syb        ,
        containers ,
        bimap      ,
        pretty

    exposed-modules:
        Language.SLIM
        Language.SLIM.Analysis
        Language.SLIM.Channel
        Language.SLIM.Channel.Types
        Language.SLIM.Common
        Language.SLIM.Common.Fader
        Language.SLIM.Common.Threshold
        Language.SLIM.Common.ValidData
        Language.SLIM.Elaboration
        Language.SLIM.Expressions
        Language.SLIM.Inspect
        Language.SLIM.Language
        Language.SLIM.Types
        Language.SLIM.UeMap

    other-extensions: GADTs, DeriveDataTypeable

    ghc-options: -Wall -Werror
    if flag(develop)
        ghc-options: -Wall -Werror -O0

source-repository head
    type:     git
    location: git://github.com/GaloisInc/slim.git
