name:                lima-om1
version:             0.2.0.0
synopsis:            OM1 in LIMA
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  om1.h
                   , om1.c
                   , om1.mcmt

executable lima-om1
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       AtomOM1
  build-depends:       base       >= 4.8     && < 5
                     , lima       >= 0.1.0.0 && < 0.2
                     , lima-c     >= 0.1.0.0 && < 0.2
                     , lima-sally >= 0.1.0.0 && < 0.2
