name:                slim-om1
version:             0.2.0.0
synopsis:            OM1 in SLIM
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  om1.h
                   , om1.c
                   , om1.mcmt

executable slim-om1
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       AtomOM1
  build-depends:       base       >= 4.8     && < 5
                     , slim       >= 0.1.0.0 && < 0.2
                     , slim-c     >= 0.1.0.0 && < 0.2
                     , slim-sally >= 0.1.0.0 && < 0.2
