name:                lima-wbs
version:             0.1.0.0
synopsis:            WBS in LIMA
author:              Brenden Hall <Brendan.Hall@Honeywell.com>,
                     Srivatsan Varadarajan
                     <Srivatsan.Varadarajan@Honeywell.com>,
                     Benjamin Jones <bjones@galois.com>
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  wbs.h
                   , wbs.c
                   , wbs.mcmt

executable lima-wbs
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       WBS
  build-depends:       base       >= 4.8     && < 5
                     , containers
                     , filepath
                     , lima       >= 0.1.0.0 && < 0.2
                     , lima-c     >= 0.1.0.0 && < 0.2
                     , lima-sally >= 0.1.0.0 && < 0.2
