name:                slim-wbs
version:             0.1.0.0
synopsis:            WBS in SLIM
author:              Brenden Hall <Brendan.Hall@Honeywell.com>,
                     Srivatsan Varadarajan
                     <Srivatsan.Varadarajan@Honeywell.com>,
                     Benjamin Jones <bjones@galois.com>
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  wbs.h
                   , wbs.c
                   , wbs.mcmt

executable slim-wbs
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       SLIMWBS
  build-depends:       base       >= 4.8     && < 4.10
                     , containers
                     , filepath
                     , slim       >= 0.1.0.0 && < 0.2
                     , slim-c     >= 0.1.0.0 && < 0.2
                     , slim-sally >= 0.1.0.0 && < 0.2
