name:                lima-periodic
version:             0.1.0.0
synopsis:            Periodic examples in LIMA
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable lima-periodic
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       Periodic
  build-depends:       base       >= 4.8     && < 5
                     , lima       >= 0.1.0.0 && < 0.2
                     , lima-c     >= 0.1.0.0 && < 0.2
                     , lima-sally >= 0.1.0.0 && < 0.2
