name:                lima-smp
version:             0.1.0.0
synopsis:            SMP example in LIMA
author:              Benjamin Jones
maintainer:          bjones@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable lima-smp
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:       SMP
  build-depends:       base       >= 4.8     && < 5
                     , lima       >= 0.1.0.0 && < 0.2
                     , lima-c     >= 0.1.0.0 && < 0.2
                     , lima-sally >= 0.1.0.0 && < 0.2
